portal/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-backend
  name: portal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portal-backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
      containers:
        - env:
            - name: DB_DATABASE
              value: service_portal
            - name: DB_HOST
              value: tailscale.kmbk.tokyotech.org
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: service_portal
            - name: GITEA_API_ENDPOINT
              value: http://git.trap.jp/api/v1
            - name: TRAQ_API_ENDPOINT
              value: http://traq-backend.traq.svc.cluster.local:8001/api/v3
            - name: WITH_GITEA
              value: "true"
            - name: WITH_MAIL
              value: "true"
            - name: WITH_TRAQ
              value: "true"
          image: ghcr.io/traptitech/portal:latest@sha256:d9ba406651ead099ed6622d7f9b45d5427b844b4ccc84d5913c783ccc4333637
          name: portal
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "200m"
              memory: "64Mi"
          volumeMounts:
            - mountPath: /app/ec_pub.pem
              name: ec-pub
              readOnly: true
              subPath: ec_pub.pem
            - mountPath: /app/ec.pem
              name: ec-private
              readOnly: true
              subPath: ec.pem
      restartPolicy: Always
      volumes:
        - name: ec-pub
          secret:
            secretName: portal-ec-pub
        - name: ec-private
          secret:
            secretName: portal-ec-private
