portal/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-backend
  name: portal-backend
spec:
  ports:
    - name: "8101"
      port: 8101
      targetPort: 3000
  selector:
    app: portal-backend
